Very simple CSS changes to prevent wrapping of the slider text in FF and IE (tested in IE 8, FF 9, Safari, Opera 9 and 11 and Chrome)

--- a/public/web/app/common.css
+++ b/public/web/app/common.css
@@ -460,11 +460,13 @@ table.pricing tr.pricinglastrow td {
 
 #ttlslider {
   display:inline-block;
-  width:320px;
-  margin-right:20px;
+  width:310px;
+  margin-right:10px;
+  white-space:nowrap;
 }
 
 #ttlslider-value {
+  white-space:nowrap;
   font-weight: bold;
 }
 
